--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hls-player": "^3.0.7"
+    "react-hls-player": "^3.0.7",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
